Agregado 1er commit

--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -14,3 +14,9 @@
 h1 {
     slc Boys
 }
+<h1>
+    Siempre la flia es Primero
+</h1>
+<h2>
+    Los amigos tambien son la Familia que un Elige
+</h2>
