--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <title>Diseñador Freelancer</title>
     <link rel="preload" href="css/styles.css" as="style">
     <link href="css/styles.css" rel="stylesheet">
-
-
 </head>
 <body>
     <header>
-        <h1>Juan De la torre Freelancer</h1>
+        <h1>Juan De la torre <span>Freelancer</span></h1>
     </header>
 
     <nav>
