--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Juan De la torre <span>Freelancer</span></h1>
+        <h1 class="titulo">Juan De la torre <span>Freelancer</span></h1>
     </header>
 
     <nav>
