--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Juan De la torre <span>Freelancer</span></h1>
+        <h1 class="titulo">Ramiro Ruggeri <span>Freelancer</span></h1>
     </header>
 
     <div class="nav-bg">
